# looptrace-napari

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  setup.cfg  shell.nix
.github/workflows/: format.yaml  lint.yaml  tests.yaml
docs/: README.md  development.md
docs/user_docs/: README.md  locus-spots.md  nuclear-masks.md
looptrace_locus_points_napari/: napari.yaml  reader.py
looptrace_napari/: __init__.py  _colors.py  _docs.py  _types.py  geometry.py  locus_specific_points_reader.py  napari.yaml  nuclei_reader.py  types.py
tests/: test_get_fov_sort_key.py  test_locus_points_smoke.py
