[metadata]
name = looptrace-locus-points-napari
version = 0.3dev
description = Napari plugin for viewing locus-specific spots, from looptrace, in napari
authors = Vince Reuter
author_email = vince.reuter@gmail.com
long_description = file: README.md
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Bioinformatics

[options]
packages = find:
include_package_data = True
install_requires = 
    pandas >=1.5.3
python_requires = >= 3.10

[options.entry_points]
napari.manifest =
    looptrace-locus-points-napari = looptrace_locus_points_napari:napari.yaml

[options.package_data]
* = napari.yaml

