[metadata]
name = looptrace-napari
version = 0.3dev
description = Napari plugin for viewing locus-specific spots, from looptrace, in napari
authors = Vince Reuter
author_email = vince.reuter@gmail.com
long_description = file: README.md
license = MIT
classifiers = 
    Development Status :: 1 - Planning
    Framework :: napari
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Bioinformatics

[options]
packages = find:
include_package_data = True
python_requires = >= 3.10

[options.entry_points]
napari.manifest =
    looptrace-napari = looptrace_napari:napari.yaml

[options.package_data]
* = napari.yaml

